--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--main-bg-color);
-  height: fit-content;
+  height: 100dvh;
 }
 
 code {
@@ -83,13 +83,14 @@ code {
   justify-content: flex-start;
   align-items: center;
   height: fit-content;
+  padding: 10px;
   margin: 0px;
 }
 
 .sectionHeader {
   font-size: 2.3rem;
   color: var(--main-text-color);
-  margin-bottom: 2vh;
+  margin-bottom: 2dvh;
 }
 
 @media only screen and (min-width: 810px) {
