--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -1,7 +1,3 @@
-.sectionContainer {
-  margin: 5px;
-}
-
 #PdfHolder {
   display: flex;
   justify-content: center;
